Preserve operator JAVA_TOOL_OPTIONS in Ghidra headless runs
Co-authored-by: kumburovicbranko682-boop <kumburovicbranko682-boop@users.noreply.github.com>
(cherry picked from commit 50dbe908e7ec4f18f6241cb1b522a0c0e1f83e59)